Minor fixes to integration by sub lecture

--- a/teaching/calc2/integration-by-substitution/index.html
+++ b/teaching/calc2/integration-by-substitution/index.html
@@ -24,9 +24,7 @@ title: Integration by substitution
 <section>
     <h3>Integration by substitution</h3>
     <p>
-        Integration by substitution is essentially the integral version of the "chain rule".
-    </p>
-    <p>
+        "Integration by substitution" is essentially the integral version of the "chain rule".
         It will allow us to compute seemingly complicated integrals like these
         \[
             \int e^{x^2} \, 2x \, dx,
