--- a/teaching/calc2/integration-by-substitution/index.html
+++ b/teaching/calc2/integration-by-substitution/index.html
@@ -251,6 +251,11 @@ title: Integration by substitution
 
         </div>
     </div>
+    <p class="fragment small lowlight">
+        The notations we used in these examples may be awkward,
+        and they are there just to help us to see the connection to chain rule.
+        We will see a more natural way of writing.
+    </p>
 </section>
 <section>
     <h3>Substitution in action: a more natural way of writing</h3>
