--- a/teaching/linalg/linear-systems/index.html
+++ b/teaching/linalg/linear-systems/index.html
@@ -21,7 +21,7 @@ title: Linear systems
     <!-- </p> -->
 </section>
 <!-- <section data-audio-src="1-1.mp3"> </section> -->
-<section>
+<section data-audio-src="1-1.mp3">
     <h3>Linear systems</h3>
     <p>
         Systems of linear equations 
@@ -31,7 +31,7 @@ title: Linear systems
     </p>
     <div class="cols">
         <div class="col">
-            <div class="definition fragment">
+            <div class="definition fragment" data-audio-src="1-2.mp3">
                 <!-- <p> -->
                     <!-- <b>Definition.</b> -->
                     A <b class="term">linear system</b> 
@@ -44,7 +44,7 @@ title: Linear systems
             </div>
         </div>
         <div class="col">
-            <p class="fragment">
+            <p class="fragment" data-audio-src="1-3.mp3">
                 For example, 
                 \[
                     \left\{
@@ -55,7 +55,7 @@ title: Linear systems
                     \right.
                 \]
                 is a system of two linear equations in the two unknowns $x$ and $y$.
-                <span class="fragment">
+                <span class="fragment" data-audio-src="1-4.mp3">
                     But
                     \[
                         \left\{
@@ -71,17 +71,17 @@ title: Linear systems
         </div>
     </div>
     <ul>
-        <li class="fragment">
+        <li class="fragment" data-audio-src="1-5.mp3">
             <b class="term">Coefficients</b>
             are the numbers (including 1 and 0) multiplied to unknowns.
         </li>
-        <li class="fragment">
+        <li class="fragment" data-audio-src="1-6.mp3">
             <b class="term">Constant terms</b>
             are the numbers (including 0's) that are by themselves.
         </li>
     </ul>
 </section>
-<section>
+<section data-audio-src="2-1.mp3">
     <h3>Preferred way of writing down linear systems</h3>
     <p>
         It is easy to see that the following linear systems are equivalent.
@@ -112,17 +112,17 @@ title: Linear systems
             </p>
         </div>
     </div>
-    <p class="fragment">
+    <p class="fragment" data-audio-src="2-2.mp3">
         They are <em>equivalent</em> in the sense that
         you can get one from the other by simply rearranging the terms
         without changing the solution set.
     </p>
-    <p class="fragment">
+    <p class="fragment" data-audio-src="2-3.mp3">
         For simplicity, we always rearrange and combine like terms
         before we study such systems.
         This will be our preferred way of writing down linear systems.
     </p>
-    <p class="fragment">
+    <p class="fragment" data-audio-src="2-4.mp3">
         That is, a linear system of 2 equations in 2 variables $x,y$
         can always be written as
         \[
@@ -136,7 +136,7 @@ title: Linear systems
         for some constants $a,b,c,d,f_1,f_2$.
     </p>
 </section>
-<section>
+<section data-audio-src="3-1.mp3">
     <p>
         In general, a <em class="term">linear equation</em> in $n$ unknowns
         $x_1,\dots,x_n$ can be written as
@@ -145,7 +145,7 @@ title: Linear systems
         \]
         for constants $a_1,a_2,\dots,a_n$ and $c$.
     </p>
-    <p class="fragment">
+    <p class="fragment" data-audio-src="3-2.mp3">
         A <em class="term">linear system</em> of $m$ equations in $n$ unknowns
         can be written as
         \[
@@ -160,7 +160,7 @@ title: Linear systems
         for (constant) <em>coefficients</em> $a_{11},\dots,a_{mn}$ 
         and <em>constant terms</em> $c_1,\dots,c_m$.
     </p>
-    <div class="fragment definition">
+    <div class="fragment definition" data-audio-src="3-3.mp3">
         The values for the unknowns that will balance <em>all</em> equations 
         in a system is a <b class="term">solution</b>, 
         and the set of <em>all</em> solutions is the 
@@ -171,7 +171,7 @@ title: Linear systems
         </p>
     </div>
 </section>
-<section>
+<section data-audio-src="4-1.mp3">
     <h3>Solving linear systems: a 2x2 example</h3>
     <div class="cols">
         <div class="col">
@@ -187,7 +187,7 @@ title: Linear systems
                 \]
             </div>
         </div>
-        <div class="col fragment">
+        <div class="col fragment" data-audio-src="4-2.mp3">
             <p>
                 <b>Solution.</b> (Substitution method)
                 One straightforward way to solve this system
@@ -198,7 +198,7 @@ title: Linear systems
     </div>
     <div class="cols">
         <div class="col">
-            <p class="fragment">
+            <p class="fragment" data-audio-src="4-3.mp3">
                 Focusing on the 1st equation
                 \[
                     2x + y = 8
@@ -212,13 +212,13 @@ title: Linear systems
             </p>
         </div>
         <div class="col">
-            <p class="fragment">
+            <p class="fragment" data-audio-src="4-4.mp3">
                 Substituting this into the 2nd equation, we get
                 \[
                     x - 2(\color{purple}{8 - 2x}) = -1,
                 \]
             </p>
-            <p class="fragment">
+            <p class="fragment" data-audio-src="4-5.mp3">
                 which can be simplified into
                 \[
                     5x - 16 = -1
@@ -228,19 +228,19 @@ title: Linear systems
             </p>
         </div>
     </div>
-    <p class="fragment">
+    <p class="fragment" data-audio-src="4-6.mp3">
         Substituting this result back to (A),
         we get
         \[
             y = 8 - 2\cdot3 = 8 - 6 = 2.
         \]
     </p>
-    <p class="fragment">
+    <p class="fragment" data-audio-src="4-7.mp3">
         Therefore $x=3,y=2$ is <em>the</em> solution
         to this linear system.
     </p>
 </section>
-<section>
+<section data-audio-src="5-1.mp3">
     <h3>Elimination method: a 2x2 example</h3>
     <div class="cols">
         <div class="col">
@@ -257,7 +257,7 @@ title: Linear systems
                 using the method of "elimination".
             </div>
         </div>
-        <div class="col fragment">
+        <div class="col fragment" data-audio-src="5-2.mp3">
             <p>
                 <b>Solution.</b> (Elimination)
                 We will follow a slightly different scheme,
@@ -269,7 +269,7 @@ title: Linear systems
     </div>
     <div class="cols">
         <div class="col">
-            <p class="fragment">
+            <p class="fragment" data-audio-src="5-3.mp3">
                 Starting with the 1st equation
                 and multiply both sides by 2; 
                 we get the <em>equivalent</em> equation
@@ -277,7 +277,7 @@ title: Linear systems
                     4x + 2y = 16.
                 \]
             </p>
-            <p class="fragment">
+            <p class="fragment" data-audio-src="5-4.mp3">
                 We can add the entire equation to the second equation
                 and get
                 \[
@@ -286,14 +286,14 @@ title: Linear systems
             </p>
         </div>
         <div class="col">
-            <p class="fragment">
+            <p class="fragment" data-audio-src="5-5.mp3">
                 which can be simplified into
                 \[
                     5x = 15,
                     \quad\text{i.e.,}\quad x=3.
                 \]
             </p>
-            <p class="fragment">
+            <p class="fragment" data-audio-src="5-6.mp3">
                 We can substitute this result back
                 to the first equation (either one is fine at this point) and get
                 \[
@@ -303,12 +303,12 @@ title: Linear systems
             </p>
         </div>
     </div>
-    <p class="fragment">
+    <p class="fragment" data-audio-src="5-7.mp3">
         Therefore $x=3,y=2$ is <em>the</em> solution
         to this linear system.
     </p>
 </section>
-<section>
+<section data-audio-src="6-1.mp3">
     <h3>Three basic operations</h3>
     <p>
         Three basic operations can be used to 
@@ -316,28 +316,28 @@ title: Linear systems
         until we can see the solutions easily.
     </p>
     <ol>
-        <li class="fragment">Swapping two equations</li>
-        <li class="fragment">Replacing an equation by a nonzero multiple of itself (both sides)</li>
-        <li class="fragment">Replacing an equation by the sum of itself and a multiple of another</li>
+        <li class="fragment" data-audio-src="6-2.mp3">Swapping two equations</li>
+        <li class="fragment" data-audio-src="6-3.mp3">Replacing an equation by a nonzero multiple of itself (both sides)</li>
+        <li class="fragment" data-audio-src="6-4.mp3">Replacing an equation by the sum of itself and a multiple of another</li>
     </ol>
-    <p class="fragment">
+    <p class="fragment" data-audio-src="6-5.mp3">
         These operations do not alter the solution set. 
         Can you see why? 
     </p>
-    <p class="fragment">
+    <p class="fragment" data-audio-src="6-6.mp3">
         Note that <em>multiplying an equation by 0 is not allowed</em> 
         as that could change the solution set. 
         Similarly, <em>adding a multiple of an equation to itself is not allowed</em> in general, 
         for the same reason.
     </p>
-    <p class="fragment">
+    <p class="fragment" data-audio-src="6-7.mp3">
         These operations are the basis of the 
         elimination method we saw earlier,
         and we will soon see how this idea can be extended to
-        larger systems involving more variables very soon.
+        larger systems involving more variables.
     </p>
 </section>
-<section>
+<section data-audio-src="7-1.mp3">
     <h3>Exercises</h3>
     <p>
         Using the methods demonstrated above,
