Minor fixes for det2x2

--- a/teaching/linalg/det-2x2/index.html
+++ b/teaching/linalg/det-2x2/index.html
@@ -21,6 +21,18 @@ title: Solution sets of linear system and 2x2 determinant
 </section>
 <!-- <section data-audio-src="1-1.mp3"> </section> -->
 <section>
+    <h3>Solution sets of linear system and 2x2 determinant</h3>
+    <p>
+        The previous lecture covered the basics of 2x2 linear systems.
+    </p>
+    <p>
+        It is possible for a linear system to have no solutions at all
+        or to have infinitely many solutions.
+        In this lecture we will study these slightly more complicated cases
+        and introduce the concept of determinant.
+    </p>
+</section>
+<section>
     <h3>Slightly more complicated cases</h3>
     <div class="cols">
         <div class="col">
@@ -42,7 +54,7 @@ title: Solution sets of linear system and 2x2 determinant
                 i.e., the solution set is an <em>empty set</em>.
                 <span class="fragment">
                     Systems like this are said to be
-                    <em class="term">inconsistent</em>.
+                    <b class="term">inconsistent</b>.
                 </span>
             </p>
         </div>
