Adding more addition worksheets

--- a/teaching/children/index.html
+++ b/teaching/children/index.html
@@ -74,4 +74,37 @@ title: Math worksheets for children
             <a href="addition-15-7-solns.pdf">[Ans]</a>
         </td>
     </tr>
+    <tr>
+        <td>
+            Additions $\le$ 20
+        </td>
+        <td>
+            <a href="addition-20-1-blank.pdf">[Mon]</a>
+            <a href="addition-20-1-solns.pdf">[Ans]</a>
+        </td>
+        <td>
+            <a href="addition-20-2-blank.pdf">[Tue]</a>
+            <a href="addition-20-2-solns.pdf">[Ans]</a>
+        </td>
+        <td>
+            <a href="addition-20-3-blank.pdf">[Wed]</a>
+            <a href="addition-20-3-solns.pdf">[Ans]</a>
+        </td>
+        <td>
+            <a href="addition-20-4-blank.pdf">[Thu]</a>
+            <a href="addition-20-4-solns.pdf">[Ans]</a>
+        </td>
+        <td>
+            <a href="addition-20-5-blank.pdf">[Fri]</a>
+            <a href="addition-20-5-solns.pdf">[Ans]</a>
+        </td>
+        <td>
+            <a href="addition-20-6-blank.pdf">[Sat]</a>
+            <a href="addition-20-6-solns.pdf">[Ans]</a>
+        </td>
+        <td>
+            <a href="addition-20-7-blank.pdf">[Sun]</a>
+            <a href="addition-20-7-solns.pdf">[Ans]</a>
+        </td>
+    </tr>
 </table>
