--- a/teaching/calc3/tnb-frame/index.html
+++ b/teaching/calc3/tnb-frame/index.html
@@ -162,6 +162,7 @@ title: The "TNB" frame
         and it is also known as the <b class="term">TNB frame</b>
         since it is constructed from the vectors 
         $\mathbf{T}(t)$, $\mathbf{N}(t)$, and $\mathbf{B}(t)$.
+        You should pause and think about the meaning of these vectors.
     </p>
 </section>
 
