Fixed the missing prime in the definition of unit normal vector

--- a/teaching/calc3/tnb-frame/index.html
+++ b/teaching/calc3/tnb-frame/index.html
@@ -86,7 +86,7 @@ title: The "TNB" frame
 <section>
     <h3>The principal unit normal vector</h3>
     <div class="definition">
-        For a given $t$ value where the unit tangent vector $\mathbf{T}(t)$
+        For a given $t$ value where $\mathbf{T}'(t)$
         is <em>defined</em> and <em>nonzero</em>,
         the <b class="term">principal unit normal vector</b> at $t$ is
         \[
@@ -96,7 +96,7 @@ title: The "TNB" frame
     <div class="cols">
         <div class="col fragment">
             <p>
-                By this definition, $\mathbf{N}(t)$ is undefined whenever $\mathbf{T}(t) = \mathbf{0}$.
+                By this definition, $\mathbf{N}(t)$ is undefined whenever $\mathbf{T}'(t) = \mathbf{0}$.
                 This is indeed intentional, and it's a useful feature rather than a bug.
             </p>
         </div>
