Updated Calc2 slides

--- a/teaching/calc2/slides/integration-by-parts.html
+++ b/teaching/calc2/slides/integration-by-parts.html
@@ -117,7 +117,7 @@ title: Integration by parts
         </span>
     </p>
     <p class="fragment small lowlight">
-        Notice that there's no need to include "$+C$" in $v$,
+        There's no need to include "$+C$" in $v$,
         as it will be hiding inside the integral we are going to produce,
         and we don’t have to worry about it until the last step.
     </p>
@@ -436,7 +436,7 @@ title: Integration by parts
         <!-- The resulting integral $\int e^\theta \sin(\theta) d\theta$  -->
         <!-- still require integration by parts. -->
         <!-- This time,  -->
-        Applying integration by parts again with
+        Integrating by parts again with
         $u = \sin(\theta)$ and $dv = e^\theta d\theta$,
         we get
         \[
@@ -451,7 +451,7 @@ title: Integration by parts
         The highlighted part is the original integral.
         <!-- So it certainly appears as if we were running in circles. -->
         To find a way out,
-        notice that
+        notice 
         \[
         \color{red}{\int e^\theta \cos(\theta) d\theta} =
         \cos(\theta) e^{\theta} +
