Adding trig substitution slides

--- a/teaching/calc2/slides/hyperbolic.html
+++ b/teaching/calc2/slides/hyperbolic.html
@@ -130,7 +130,7 @@ title: Hyperbolic functions
     <h3>Equilateral hyperbola</h3>
     <div class="cols">
         <div class="col">
-            <img src="hyperbola.png" alt="Hyperbola">
+            <img src="../hyperbola.png" alt="Hyperbola">
         </div>
         <div class="col">
             <p>
