Adding linear independence lecture

--- a/teaching/applinalg/lectures/vectors.html
+++ b/teaching/applinalg/lectures/vectors.html
@@ -630,7 +630,7 @@ title: Vectors in the plane
         \]
     </p>
     <p class="fragment">
-        For most purpose, we can use either format
+        For most purpose, we can use either
         as long as we are being consistent.
     </p>
     <p class="fragment lowlight">
@@ -644,14 +644,10 @@ title: Vectors in the plane
         Representing high-dimensional data
     </h3>
     <p>
-        Vectors of this form
-        \[
-            \begin{bmatrix} x_1 \\ \vdots \\ x_n \end{bmatrix}
-        \]
-        are useful in representing real world data
+        Vectors are useful in representing real world data
         whenever the description require more than one number.
     </p>
-    <p class="fragment">
+    <div class="fragment problem">
         Your grades in this course depends on your performance
         in several graded components.
         <ol>
@@ -667,11 +663,11 @@ title: Vectors in the plane
                         Your overall course score;
                     </li>
                     <li>
-                        The average scores of all the students in class
-                        in each graded component.
+                        The average scores of the students in class
+                        in each component.
                     </li>
                 </ul>
             </li>
         </ol>
-    </p>
+    </div.fragment.problem>
 </section>
